--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ highlighter: rouge
 
 markdown: kramdown
 
-repository: stephenrdoyle/stephenrdoyle-lab.github.io
+repository: stephenrdoyle/stephenrdoyle.github.io
 
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
@@ -36,7 +36,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : https://stephenrdoyle-lab.github.io
+production_url : https://stephenrdoyle.github.io
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
